# coffer-cli

./: .gitignore  README.md  README.md.tmp  pyproject.toml
skills/coffer-cost-review/: README.md  SKILL.md
src/coffer_cli/: __init__.py  _pricing.py  cli.py  patterns.py
src/coffer_cli/_skill_files/coffer-cost-review/: README.md
tests/: test_patterns.py
