[project]
name = "coffer-cli"
version = "0.1.2"
description = "Scan codebases for LLM cost-waste anti-patterns. Find retry storms, missing prompt caching, unbounded conversation history, agent loops without iteration caps, and more — before you ship."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Neal" },
]
keywords = [
    "llm",
    "finops",
    "cost",
    "openai",
    "anthropic",
    "claude",
    "gpt",
    "static-analysis",
    "linter",
    "claude-code",
    "skill",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.13",
    "rich>=13.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/neal-c611/coffer-cli"
Repository = "https://github.com/neal-c611/coffer-cli"
Issues = "https://github.com/neal-c611/coffer-cli/issues"

[project.scripts]
coffer = "coffer_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/coffer_cli"]
# Bundle the skill files into the wheel so `coffer install-skill` can copy
# them to the user's ~/.claude/skills/ directory.
artifacts = ["src/coffer_cli/_skill_files/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
